--- a/css/index.bundle.css
+++ b/css/index.bundle.css
@@ -20,7 +20,7 @@
 }
 
 body{
-    background-image: url(images/background..png) !important;
+    background-image: url(../images/background..png) !important;
     font-family: Roboto;
     max-width: 1600px;
     margin: auto;
