--- a/index.bundle.css
+++ b/index.bundle.css
@@ -28,7 +28,7 @@ body{
 }
 header{
 /*     position: fixed; */
-    height: 100px;
+    height: 70px;
     max-width: 1600px;
     display: flex;
     justify-content: space-around;
@@ -196,7 +196,7 @@ header .menu__list a, header i{
   position: fixed;
   z-index: 100;
   right: 20px;
-  top: 30px;
+  top: 20px;
 }
 main{
     width: auto;
@@ -568,7 +568,7 @@ form > .fields > .field {
   -webkit-flex-shrink: 0;
   -ms-flex-shrink: 0;
   flex-shrink: 0;
-  padding: 1.5rem 0 0 1.5rem;
+  padding: 1.5rem 0 0;
   margin: auto;
   width: calc(90% - 1.5rem);
 }
@@ -653,6 +653,7 @@ footer{
   transition: opacity .5s;
   animation: spin 2.5s linear infinite;
 }
+
 @keyframes spin {
   0% {
     --rotate: 0deg;
@@ -661,7 +662,11 @@ footer{
     --rotate: 360deg;
   }
 }
+
 @media(min-width: 787px){
+    header {
+      height: 100px;
+    }
     header img {
       width: 200px;
     }
