--- a/index.bundle.css
+++ b/index.bundle.css
@@ -20,7 +20,7 @@
 }
 
 body{
-    background-image: url(/images/background..png) !important;
+    background-image: url(images/background..png) !important;
     font-family: Roboto;
     max-width: 1420px;
     margin: auto;
