--- a/index.bundle.css
+++ b/index.bundle.css
@@ -278,21 +278,25 @@ h1 span{
 }
 
 .container__title{
-/*     padding: 50px 0; */
     margin-top: 10px;
     height: 180px;
+    opacity: 0;
+    transform: translateX(-100px);
+    animation: fadeInLeft 1s ease-out forwards;
 }
 .container__image-profile{
     position: relative;
     min-width: 320px;
     margin: 50px 0;
     text-align: center;
+    transform: translateX(100px);
+    animation: fadeInRight 1s ease-out forwards;
 }
 .container__image-profile img{
     width: 70%;
     border-radius: 50%;
     animation: flipInY;
-    animation-duration: 1s;
+    animation-duration: 2.5s;
 }
 .circle1, .circle2{
   position: absolute;
@@ -798,6 +802,27 @@ button {
 }
 button:hover {
   background: #ff6b81;
+}
+@keyframes fadeInLeft {
+  from {
+      opacity: 0;
+      transform: translateX(-100px);
+  }
+  to {
+      opacity: 1;
+      transform: translateX(0);
+  }
+}
+
+@keyframes fadeInRight {
+  from {
+      opacity: 0;
+      transform: translateX(100px);
+  }
+  to {
+      opacity: 1;
+      transform: translateX(0);
+  }
 }
 
 @media(min-width: 787px){
