--- a/index.bundle.css
+++ b/index.bundle.css
@@ -469,7 +469,18 @@ details[open] summary {
   border-bottom: 2px solid var(--primary-color);
 }
 .subsection {
+  opacity: 0;
   margin-top: 20px;
+  transform: translateX(-100px);
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+}
+.subsection:nth-child(even) {
+  transform: translateX(100px);
+}
+
+.subsection.show {
+  opacity: 1;
+  transform: translateX(0);
 }
 
 .container__categories details summary{
