--- a/index.bundle.css
+++ b/index.bundle.css
@@ -19,7 +19,9 @@
     box-sizing: border-box;
     color: var(--white);
 }
-
+html {
+  scroll-behavior: smooth;
+}
 body{
     background-image: url(images/background..png) !important;
     font-family: Roboto;
@@ -34,7 +36,7 @@ header{
     display: flex;
     justify-content: space-around;
     will-change: scroll-position;
-    transition-duration: transform 0.7s linear;
+    transition: transform 0.7s linear;
 }
 header .navbar {
     position: absolute;
@@ -42,7 +44,7 @@ header .navbar {
     left: -100vh;
     bottom: 0;
     margin: auto;
-    transition: 0.7s;
+    transition: all 0.7s ease-in-out;
     z-index: 10;
   }
   header .navbar-brand {
@@ -67,8 +69,10 @@ header .menu__list i {
     margin:0 20px;
 }
 #btn-menu-2{
-    display: none;
     z-index: 1000;
+}
+.hidden {
+  display: none;
 }
 header .menu__list a {
     text-decoration: none;
@@ -77,7 +81,7 @@ header .menu__list a {
 }
 header .menu__list a:hover {
     color: var(--secondary-color);
-}
+} 
 
 header .menu__list .nav-item {
     align-content: left;
@@ -91,8 +95,9 @@ header i{
 header .is-active {
     position: fixed;
     left: 0;
+    opacity: 0.9;
     transform: translateX(0px);
-    transition-duration: transform 0.5s linear;
+    transition: all 0.3s linear;
 }
 
 .container-logo{
@@ -198,6 +203,9 @@ header .menu__list a, header i{
   z-index: 100;
   right: 20px;
   top: 20px;
+}
+.btn-mobile i {
+  transition: opacity 0.3s ease-in-out;
 }
 main{
     width: auto;
@@ -435,6 +443,11 @@ section p{
 .container__image-about img{
   width: -webkit-fill-available;
 }
+.container__text-about {
+  background-color: var(--bg-dark);
+  border-radius: 20px;
+  align-content: center;
+}
 h3{
   color: var(--primary-color);
 }
@@ -445,14 +458,15 @@ section svg{
 .container__general {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   padding: 15px;
   margin: 0;
   background-color: var(--bg-dark);
 }
 .container__skill svg, .container__skill i {
-  height: 70px;
-  max-width: 70px;
-  font-size: 70px;
+  height: 60px;
+  max-width: 60px;
+  font-size: 60px;
 }
 details[open] summary {
   background: var(--accordion-active);
@@ -489,7 +503,7 @@ details[open] summary {
 }
 .container__skill{
   width: 70px;
-  margin: 8px 24px;
+  margin: 8px 16px;
 /*   padding: 5px; */
   align-self: baseline;
   text-align: center;
