--- a/index.bundle.css
+++ b/index.bundle.css
@@ -23,7 +23,7 @@ html {
   scroll-behavior: smooth;
 }
 body{
-    background-image: url(a1863bf53c8a758b6a4d.png) !important;
+    background-image: url(images/background.png) !important;
     font-family: Roboto;
     max-width: 1420px;
     margin: auto;
